cmake_minimum_required(VERSION 3.28)
project(Metro)
option(BUILD_SHARED_LIBS "Build using shared libraries " ON)
add_library(f f.cpp)
target_include_directories(f PUBLIC ${MAKE_SOURCE_DIR})
set(CMAKE_CXX_STANDARD 20)
add_executable(Metro main.cpp f.cpp)
add_executable(InitTesting tests.cpp f.cpp)
target_link_libraries(Metro PRIVATE f)
target_link_libraries(InitTesting PRIVATE f)
